docs: restructure with signals/view sections and sandbox integration

--- a/packages/docs/src/content/docs/faq.mdx
+++ b/packages/docs/src/content/docs/faq.mdx
@@ -33,7 +33,7 @@ You're looking at the docs! And yes, there are [examples](https://github.com/hej
 
 ## Are there devtools?
 
-A bit noisy and perhaps overly granular, but yes (and written entirely with Rimitive!).
+Perhaps overly granular, but yes (and powered by Rimitive!).
 
 ---
 
@@ -51,4 +51,4 @@ No module-level or global state—each `compose()` call creates isolated state, 
 
 ## "Rimitive primitives"??
 
-I SAID BEFORE. Leave. me. be.
+Leave. me. be. I hate naming.
