--- a/packages/docs/src/content/docs/patterns/behaviors.mdx
+++ b/packages/docs/src/content/docs/patterns/behaviors.mdx
@@ -32,7 +32,7 @@ const behaviorName = (svc: SignalsSvc) => (options?: Options) => {
 ```
 
 Three levels:
-1. **Service injection**: `(svc) =>` — receives primitives
+1. **Service injection**: `(svc) =>` — receives modules
 2. **Factory**: `(options?) =>` — configures the instance
 3. **API**: `{ ... }` — the reactive interface consumers use
 
