--- a/packages/docs/src/content/docs/patterns/index.mdx
+++ b/packages/docs/src/content/docs/patterns/index.mdx
@@ -3,7 +3,7 @@ title: Patterns
 description: Common patterns for building Rimitive applications.
 ---
 
-Rimitive is intentionally minimal. It provides primitives—signals, computed, effects, elements, fragments—and lets you compose them into whatever patterns fit your needs.
+Rimitive is intentionally minimal. It provides reactive primitives and modules—signals, computed, effects, elements, fragments—and lets you compose them into whatever patterns fit your needs.
 
 This section covers common patterns you'll encounter when building with Rimitive. These aren't special APIs or hidden features—they're just idiomatic ways to solve common problems using the primitives you already have.
 
