--- a/packages/docs/src/content/docs/guides/refs.mdx
+++ b/packages/docs/src/content/docs/guides/refs.mdx
@@ -59,7 +59,7 @@ The cleanup runs when the element is removed from the DOM.
 If a parent needs access to a child's DOM node, pass a callback:
 
 ```typescript
-const Input = ({ el }: Service) => (props: { onRef?: (node: HTMLInputElement) => void }) => {
+const input = ({ el }: Service) => (props: { onRef?: (node: HTMLInputElement) => void }) => {
   return el('input').ref((node) => {
     props.onRef?.(node);
   })();
@@ -67,11 +67,11 @@ const Input = ({ el }: Service) => (props: { onRef?: (node: HTMLInputElement) =>
 
 const Form = (svc: Service) => () => {
   const { el } = svc;
-  const useInput = svc(Input);
+  const Input = svc(input);  // Wired component gets PascalCase
   let inputNode: HTMLInputElement | null = null;
 
   return el('form')(
-    useInput({ onRef: (node) => { inputNode = node; } }),
+    Input({ onRef: (node) => { inputNode = node; } }),
     el('button').props({
       onclick: () => inputNode?.focus()
     })('Focus Input')
@@ -84,11 +84,11 @@ Or with signals for reactive access:
 ```typescript
 const Form = (svc: Service) => () => {
   const { el, signal } = svc;
-  const useInput = svc(Input);
+  const Input = svc(input);
   const inputRef = signal<HTMLInputElement | null>(null);
 
   return el('form')(
-    useInput({ onRef: (node) => inputRef(node) }),
+    Input({ onRef: (node) => inputRef(node) }),
     el('button').props({
       onclick: () => inputRef()?.focus()
     })('Focus Input')
