--- a/packages/docs/src/content/docs/benchmarks.mdx
+++ b/packages/docs/src/content/docs/benchmarks.mdx
@@ -1,24 +1,24 @@
 ---
 title: Benchmarks
-description: Performance benchmarks comparing Rimitive signals to other reactive libraries.
+description: Performance benchmarks for Rimitive signals and view layer.
 ---
 
-import Benchmarks from '../../components/Benchmarks.astro';
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
-Performance is a core focus of Rimitive. We regularly benchmark against other popular reactive libraries to ensure competitive performance.
+Performance is a core focus of Rimitive. We regularly benchmark to ensure competitive performance and optimal scaling.
 
-## Signal Operations
-
-These benchmarks measure core signal operations like reading, writing, and propagating changes through dependency graphs.
-
-<Benchmarks />
-
-## Methodology
-
-- Benchmarks run using [mitata](https://github.com/evanwashere/mitata) with garbage collection enabled
-- Each benchmark runs multiple iterations to ensure statistical significance
-- Results show median time per operation (lower is better)
-- Ratios compare against Rimitive (1.00x = same speed)
+<CardGrid>
+  <LinkCard
+    title="Signal Benchmarks"
+    description="Compare Rimitive signals against Preact Signals and Alien Signals."
+    href="/signals/benchmarks/"
+  />
+  <LinkCard
+    title="View Benchmarks"
+    description="See how view operations scale with data size."
+    href="/view/benchmarks/"
+  />
+</CardGrid>
 
 ## Running Locally
 
@@ -27,6 +27,7 @@ To run benchmarks on your own machine:
 ```bash
 cd packages/benchmarks
 pnpm bench              # Run all benchmarks
-pnpm bench diamond      # Run specific benchmark
+pnpm bench diamond      # Run specific signal benchmark
+pnpm bench map/append   # Run specific view benchmark
 pnpm bench --docs       # Run and update docs data
 ```
